clean up & working
